--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,27 @@
     {% else %}
         <p>Please select a city.</p>
     {% endif %}
+
+    <h2>Historical Data</h2>
+    {% if historical_data %}
+        <table>
+            <tr>
+                <th>City</th>
+                <th>Temperature</th>
+                <th>Description</th>
+                <th>Date</th>
+            </tr>
+            {% for data in historical_data %}
+                <tr>
+                    <td>{{ data.city }}</td>
+                    <td>{{ data.temperature }}°C</td>
+                    <td>{{ data.description }}</td>
+                    <td>{{ data.date }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>No historical data available.</p>
+    {% endif %}
 </body>
 </html>
